--- a/create_account.html
+++ b/create_account.html
@@ -46,6 +46,7 @@
     // Import the necessary Firebase modules from the CDN
     import { getAuth, createUserWithEmailAndPassword,updateProfile  } from "https://www.gstatic.com/firebasejs/9.0.0/firebase-auth.js";
     import { initializeApp } from "https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js";
+    
 
     // Firebase config (replace with your actual Firebase config)
     const firebaseConfig = {
@@ -84,7 +85,7 @@
     // Function to handle account creation when button is clicked
     const handleCreateAccount = () => {
       const name = document.getElementById("name").value;
-      const company = document.getElementById("compnany").value;
+      const company = document.getElementById("company").value;
       const email = document.getElementById("username").value;
       const password = document.getElementById("password").value;
       const repassword = document.getElementById("repassword").value;
