--- a/create_account.html
+++ b/create_account.html
@@ -26,7 +26,7 @@
               <input type="text" id="name" placeholder="Enter First Name" name="name" required autofocus>  
 
             <label for="company"><b>Company Name</b></label>
-            <input type="text" id="compnany" placeholder="Enter Company Name" name="company name" required autofocus>
+            <input type="text" id="company" placeholder="Enter Company Name" name="company name" required autofocus>
 
             <label for="username"><b>Username</b></label>
             <input type="text" id="username" placeholder="Enter Email Address" name="username" required autofocus>
