--- a/create_account.html
+++ b/create_account.html
@@ -96,7 +96,7 @@
       } else if (password !== repassword) {
         alert("Passwords do not match.");
       } else {
-        push(loginRef, {
+        set(loginRef, {
           name: name,
           company: company,
         });
