--- a/login.html
+++ b/login.html
@@ -58,7 +58,7 @@
       const userCredential = await signInWithEmailAndPassword(auth, email, password);
       const user = userCredential.user;
 
-      // Now retrieve the user's company from Firebase Realtime Database
+      // retrieve user company
       const dbRef = ref(database);
       const snapshot = await get(child(dbRef, `login/`));
 
@@ -67,11 +67,11 @@
         const companies = snapshot.val();
         for (const company in companies) {
           if (companies[company].ID === user.uid) {
-            userCompany = companies[company].company;
+            userCompany = company;
             break;
-          }
-        }
-      }
+    }
+  }
+}
 
       alert("User signed in!");
       window.location.href = `index.html?email=${encodeURIComponent(user.email)}&company=${encodeURIComponent(userCompany)}`;
