--- a/login.html
+++ b/login.html
@@ -72,7 +72,7 @@
     }
   }
 }
-
+      console.log("Redirecting with company:", userCompany);
       alert("User signed in!");
       window.location.href = `index.html?email=${encodeURIComponent(user.email)}&company=${encodeURIComponent(userCompany)}`;
     } catch (error) {
