--- a/login.html
+++ b/login.html
@@ -67,7 +67,7 @@
         const companies = snapshot.val();
         for (const company in companies) {
           if (companies[company].ID === user.uid) {
-            userCompany = company;
+            userCompafny = company;
             break;
     }
   }
